# person_tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
data/: people.xml
msg/: FingerTrack.msg  HandTrack.msg  SkeletonTrack.msg  TrackedPerson.msg  TrackerState.msg
src/: people_tracker.cpp  tracking_filter.cpp
